--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_modular: ^4.2.0
   mobx: ^2.0.5
   flutter_mobx: ^2.0.2
   build_runner: ^2.1.5
   cloud_firestore: ^3.1.0
   firebase_core: ^1.10.0
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
